--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             </article>
         </div>
     </section>
-
-    <section id="marquee-text" class="full-width-section">
+<section id="marquee-text" class="full-width-section">
         <div class="marquee-content">
             <span class="marquee-item">CODE</span>
             <span class="marquee-item">DEVELOPER</span>
@@ -74,6 +73,7 @@
             <span class="marquee-item">DESIGN</span>
         </div>
     </section>
+    
     <section id="services">
         <h2>Dịch Vụ Của Tôi</h2>
         <div class="service-grid">
@@ -101,14 +101,14 @@
             <figure class="project-item card-style">
                 <img src="images/image copy 2.png" alt="Dự án thiết kế web sức khỏe và thể hình">
                 <figcaption>
-                    <h3>Sell Skin Care Products</h3>
+                    <h3>Ứng dụng sức khỏe và thể hình</h3>
                     <p>Phát triển một trang web chăm sóc bản thân một cách có khoa học như thức ăn và chế độ tập luyện</p>
                 </figcaption>
             </figure>
             <figure class="project-item card-style">
                 <img src="images/image copy 3.png" alt="Dự án Quản lý cửa hàng tay cầm chơi game">
                 <figcaption>
-                    <h3>Diamond Store Manager</h3>
+                    <h3>Quản lý công ty tay cầm</h3>
                     <p>Ứng dụng web để quản lý nhân viên và các chiến thuật marketing.</p>
                 </figcaption>
             </figure>
