--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#marquee-text">Skills</a></li>
+            <li><a href="#hobbies">Hobbies</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -33,12 +33,33 @@
         <div class="info-tabs">
             <article class="card-style">
                 <h3>Kỹ Năng</h3>
-                <ul>
-                    <li>Front-End: HTML, CSS, JavaScript</li>
-                    <li>Back-End: Python, SQL, Node.js</li>
-                    <li>App Development: Building Android/IOS Apps</li>
-                </ul>
-            </article>
+                <div class="skills-list">
+                    <div class="skill-item">
+                        <span class="skill-name">HTML / CSS / JavaScript</span>
+                        <div class="skill-bar">
+                            <div class="skill-progress" style="width: 85%;">85%</div>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <span class="skill-name">Python / Node.js</span>
+                        <div class="skill-bar">
+                            <div class="skill-progress" style="width: 70%;">70%</div>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <span class="skill-name">SQL Database</span>
+                        <div class="skill-bar">
+                            <div class="skill-progress" style="width: 65%;">65%</div>
+                        </div>
+                    </div>
+                    <div class="skill-item">
+                        <span class="skill-name">App Development (Android/iOS)</span>
+                        <div class="skill-bar">
+                            <div class="skill-progress" style="width: 50%;">50%</div>
+                        </div>
+                    </div>
+                </div>
+                </article>
             <article class="card-style">
                 <h3>Kinh Nghiệm</h3>
                 <ul>
@@ -56,24 +77,28 @@
             </article>
         </div>
     </section>
-<section id="marquee-text" class="full-width-section">
-        <div class="marquee-content">
-            <span class="marquee-item">CODE</span>
-            <span class="marquee-item">DEVELOPER</span>
-            <span class="marquee-item">FULLSTACK</span>
-            <span class="marquee-item">LEQUANGLOC</span>
-            <span class="marquee-item">WEB</span>
-            <span class="marquee-item">DESIGN</span>
-            
-            <span class="marquee-item">CODE</span>
-            <span class="marquee-item">DEVELOPER</span>
-            <span class="marquee-item">FULLSTACK</span>
-            <span class="marquee-item">LEQUANGLOC</span>
-            <span class="marquee-item">WEB</span>
-            <span class="marquee-item">DESIGN</span>
+
+    <section id="hobbies">
+        <h2>Sở Thích Cá Nhân</h2>
+        <div class="service-grid">
+            <article class="card-style">
+                <img src="images/image copy 4.png" alt="Hình ảnh minh họa chơi game" class="hobby-img">
+                <h3>Chơi Game</h3>
+                <p>Thư giãn và phát triển kỹ năng giải quyết vấn đề qua các trò chơi chiến thuật và nhập vai (RPG).</p>
+            </article>
+            <article class="card-style">
+                <img src="images/image copy 6.png" alt="Hình ảnh minh họa nghiên cứu công nghệ" class="hobby-img">
+                <h3>Nghiên Cứu Công Nghệ</h3>
+                <p>Luôn cập nhật các framework, ngôn ngữ lập trình và xu hướng công nghệ mới nhất.</p>
+            </article>
+            <article class="card-style">
+                <img src="images/image copy 5.png" alt="Hình ảnh minh họa thể thao " class="hobby-img">
+                <h3>Thể Thao </h3>
+                <p>Tăng cường sức khỏe và học hỏi tinh thần đồng đội qua việc chơi bóng đá hàng tuần.</p>
+            </article>
         </div>
     </section>
-    
+
     <section id="services">
         <h2>Dịch Vụ Của Tôi</h2>
         <div class="service-grid">
